[package]
name = "multicast-paging-utility"
version = "0.1.0"
edition = "2021"
description = "Multicast paging system testing and troubleshooting utility"
license = "MIT"
readme = "README.md"
default-run = "multicast-paging-utility"

[features]
default = []
gui = ["gtk4", "libadwaita", "glib-build-tools"]

[dependencies]
# GUI (optional)
gtk4 = { version = "0.9", optional = true }
libadwaita = { version = "0.7", optional = true }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros", "signal"] }
async-channel = "2"

# Networking
socket2 = { version = "0.5", features = ["all"] }

# Audio
cpal = "0.15"
ringbuf = "0.4"
symphonia = { version = "0.5", features = ["all"] }
rustfft = "6"

# Codecs
audiopus = "0.3.0-rc.0"

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dashmap = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# Audio Recording
hound = "3"

# Utils
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
bytes = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[build-dependencies]
glib-build-tools = { version = "0.20", optional = true }
